--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{48AAFBB6-B6C5-49E3-9A45-DEDAA3A4CDDE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EpidemicSim_Library</RootNamespace>
-    <AssemblyName>EpidemicSim_Library</AssemblyName>
+    <RootNamespace>PSC2013.ES.Library</RootNamespace>
+    <AssemblyName>ES Library</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
