Completed the parser..

--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\CityPopulationInfo.cs" />
+    <Compile Include="Parsers\PopulationParser.cs" />
     <Compile Include="UI\MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +70,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="population_data.csv" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
