--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\CityPopulationInfo.cs" />
+    <Compile Include="Parsers\DepartmentParser.cs" />
     <Compile Include="Parsers\LandCircleParser.cs" />
     <Compile Include="Parsers\MapParser.cs" />
     <Compile Include="Parsers\PopulationParser.cs" />
