Added the coordinates for the "LandCircles".

--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Deutschland_og.bmp" />
+    <Content Include="landcirclecoords.txt" />
     <Content Include="testcoords.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
