Added match functionality to PopulationParser,
fixed some minor things..

--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\CityPopulationInfo.cs" />
+    <Compile Include="Data\RegionPopulationInfo.cs" />
     <Compile Include="Parsers\DepartmentParser.cs" />
     <Compile Include="Parsers\LandCircleParser.cs" />
     <Compile Include="Parsers\MapParser.cs" />
