--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Population\Gender.cs" />
+    <Compile Include="Population\Human.cs" />
     <Compile Include="Population\PopulationCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
