--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -42,18 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Age.cs" />
-    <Compile Include="AreaData\FederalState.cs" />
     <Compile Include="AreaData\Departement.cs" />
-    <Compile Include="Converter\HumanConverter.cs" />
     <Compile Include="Diseases\Disease.cs" />
+    <Compile Include="Population\Age.cs" />
+    <Compile Include="AreaData\FederalState.cs" />
+    <Compile Include="Converter\HumanConverter.cs" />
     <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="Human.cs" />
+    <Compile Include="Population\Gender.cs" />
+    <Compile Include="Population\Human.cs" />
     <Compile Include="Manipulation\AIContainer.cs" />
     <Compile Include="Manipulation\InfectionContainer.cs" />
     <Compile Include="Manipulation\InfluencingContainer.cs" />
-    <Compile Include="PopulationCell.cs" />
+    <Compile Include="Population\PopulationCell.cs" />
     <Compile Include="PopulationData\Human.cs" />
     <Compile Include="PopulationData\PopulationCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,9 +61,7 @@
     <Compile Include="Simulator\Simulator.cs" />
     <Compile Include="Simulator\TimeConstants.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
