--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -44,16 +44,14 @@
   <ItemGroup>
     <Compile Include="AreaData\Departement.cs" />
     <Compile Include="Diseases\Disease.cs" />
-    <Compile Include="Population\Age.cs" />
+    <Compile Include="PopulationData\Age.cs" />
     <Compile Include="AreaData\FederalState.cs" />
     <Compile Include="Converter\HumanConverter.cs" />
     <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Population\Gender.cs" />
-    <Compile Include="Population\Human.cs" />
+    <Compile Include="PopulationData\Gender.cs" />
     <Compile Include="Manipulation\AIContainer.cs" />
     <Compile Include="Manipulation\InfectionContainer.cs" />
     <Compile Include="Manipulation\InfluencingContainer.cs" />
-    <Compile Include="Population\PopulationCell.cs" />
     <Compile Include="PopulationData\Human.cs" />
     <Compile Include="PopulationData\PopulationCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
