--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -42,13 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AreaData\Departement.cs" />
+    <Compile Include="AreaData\Department.cs" />
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
     <Compile Include="PopulationData\Age.cs" />
     <Compile Include="PopulationData\Gender.cs" />
     <Compile Include="AreaData\FederalState.cs" />
-    <Compile Include="Converter\HumanConverter.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Manipulation\AIContainer.cs" />
     <Compile Include="Manipulation\InfectionContainer.cs" />
