Added a basic IO structure

--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -45,6 +45,9 @@
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
+    <Compile Include="IO\DocumentType.cs" />
+    <Compile Include="IO\ES_Document.cs" />
+    <Compile Include="IO\IDocumentWriter.cs" />
     <Compile Include="PopulationData\Age.cs" />
     <Compile Include="PopulationData\Gender.cs" />
     <Compile Include="AreaData\FederalState.cs" />
