--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -45,9 +45,7 @@
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
-    <Compile Include="IO\DocumentType.cs" />
-    <Compile Include="IO\ES_Document.cs" />
-    <Compile Include="IO\Writers\IDocumentWriter.cs" />
+    <Compile Include="IO\Writers\IFileWriter.cs" />
     <Compile Include="PopulationData\Age.cs" />
     <Compile Include="PopulationData\Gender.cs" />
     <Compile Include="AreaData\FederalState.cs" />
