Added Human.To/FromBase64 and overwrote Equals, GetHashCode and ToString, added ExtensionMethods to convert byte and int To/FromBase64, also renamed Enums to EName scheme

--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -50,14 +50,14 @@
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
     <Compile Include="IO\Writers\IFileWriter.cs" />
-    <Compile Include="PopulationData\Age.cs" />
-    <Compile Include="PopulationData\Gender.cs" />
+    <Compile Include="PopulationData\EAge.cs" />
+    <Compile Include="PopulationData\EGender.cs" />
     <Compile Include="AreaData\FederalState.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="PopulationData\Human.cs" />
-    <Compile Include="PopulationData\Mindset.cs" />
+    <Compile Include="PopulationData\EMindset.cs" />
     <Compile Include="PopulationData\PopulationCell.cs" />
-    <Compile Include="PopulationData\Profession.cs" />
+    <Compile Include="PopulationData\EProfession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Simulator\SimulationData.cs" />
     <Compile Include="Simulator\Simulator.cs" />
