--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -47,6 +47,8 @@
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="AreaData\DepartmentInfo.cs" />
     <Compile Include="AreaData\MatrixGenerator.cs" />
+    <Compile Include="Snapshot\SimulationContainer.cs" />
+    <Compile Include="Snapshot\SimulationInfo.cs" />
     <Compile Include="Snapshot\Snapshot.cs" />
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
@@ -61,9 +63,9 @@
     <Compile Include="PopulationData\PopulationCell.cs" />
     <Compile Include="PopulationData\EProfession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Simulator\SimulationData.cs" />
-    <Compile Include="Simulator\Simulator.cs" />
-    <Compile Include="Simulator\TimeConstants.cs" />
+    <Compile Include="Simulation\SimulationData.cs" />
+    <Compile Include="Simulation\Simulator.cs" />
+    <Compile Include="Simulation\TimeConstants.cs" />
     <Compile Include="Snapshot\SnapshotManager.cs" />
   </ItemGroup>
   <ItemGroup />
