Added ECauseOfDeath and did some cleanup

--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="AreaData\DepartmentInfo.cs" />
     <Compile Include="AreaData\MatrixGenerator.cs" />
+    <Compile Include="Snapshot\ECauseOfDeath.cs" />
     <Compile Include="Snapshot\HumanSnapschot.cs" />
     <Compile Include="Snapshot\SimulationContainer.cs" />
     <Compile Include="Snapshot\SimulationInfo.cs" />
