--- a/EpidemicSim_Tests/EpidemicSim_Tests.csproj
+++ b/EpidemicSim_Tests/EpidemicSim_Tests.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreaData\MatrixGeneratorTest.cs" />
     <Compile Include="PopulationData\HumanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExampleTest.cs" />
