--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EpidemicSimulator.cs" />
     <Compile Include="IO\Files\IDocument.cs" />
     <Compile Include="IO\Writers\AsyncBinaryWriter.cs" />
     <Compile Include="Snapshot\CellSnapshot.cs" />
@@ -71,7 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Simulation\SimulationData.cs" />
     <Compile Include="Simulation\Simulator.cs" />
-    <Compile Include="Simulation\TimeConstants.cs" />
+    <Compile Include="Simulation\ETimeConstants.cs" />
     <Compile Include="Snapshot\SnapshotManager.cs" />
   </ItemGroup>
   <ItemGroup />
