Snapshot Manager has to be feeded with data...

--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -57,7 +57,7 @@
     <Compile Include="AreaData\DepartmentInfo.cs" />
     <Compile Include="AreaData\MatrixGenerator.cs" />
     <Compile Include="Snapshot\ECauseOfDeath.cs" />
-    <Compile Include="Snapshot\HumanSnapschot.cs" />
+    <Compile Include="Snapshot\HumanSnapshot.cs" />
     <Compile Include="Snapshot\SimulationContainer.cs" />
     <Compile Include="Snapshot\SimulationInfo.cs" />
     <Compile Include="Snapshot\Snapshot.cs" />
