--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EpidemicSimulator.cs" />
     <Compile Include="IO\Files\IDocument.cs" />
     <Compile Include="IO\Writers\AsyncBinaryWriter.cs" />
+    <Compile Include="Simulation\Component\DebugSimulationComponent.cs" />
     <Compile Include="Simulation\Component\ESimulationStage.cs" />
     <Compile Include="Simulation\Component\ISimulationComponent.cs" />
     <Compile Include="Simulation\SimulationEventArgs.cs" />
