Writer and reader for the matched population-department information. maybe i'll add the output-file to .git-ignore because is to large.

--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\RegionPopulationInfo.cs" />
+    <Compile Include="IO\DataWriter.cs" />
     <Compile Include="Parsers\DepartmentParser.cs" />
     <Compile Include="Parsers\LandCircleParser.cs" />
     <Compile Include="Parsers\MapParser.cs" />
