--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="EpidemicSimulator.cs" />
     <Compile Include="IO\Files\IDocument.cs" />
+    <Compile Include="IO\Readers\DepartmentMapReader.cs" />
     <Compile Include="IO\Writers\AsyncBinaryWriter.cs" />
     <Compile Include="Simulation\Component\DebugSimulationComponent.cs" />
     <Compile Include="Simulation\Component\ESimulationStage.cs" />
