--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EpidemicSimulator.cs" />
     <Compile Include="IO\Readers\DepartmentMapReader.cs" />
     <Compile Include="IO\Writers\AsyncBinaryWriter.cs" />
+    <Compile Include="Simulation\Components\AgeingSimulationComponent.cs" />
     <Compile Include="Simulation\Components\DebugSimulationComponent.cs" />
     <Compile Include="Simulation\Components\ESimulationStage.cs" />
     <Compile Include="Simulation\Components\ISimulationComponent.cs" />
@@ -59,7 +60,6 @@
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="AreaData\DepartmentInfo.cs" />
     <Compile Include="AreaData\MatrixGenerator.cs" />
-    <Compile Include="Snapshot\ECauseOfDeath.cs" />
     <Compile Include="Snapshot\HumanSnapshot.cs" />
     <Compile Include="Snapshot\SimulationInfo.cs" />
     <Compile Include="Snapshot\Snapshot.cs" />
