--- a/EpidemicSim_Tests/EpidemicSim_Tests.csproj
+++ b/EpidemicSim_Tests/EpidemicSim_Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExampleTest.cs" />
     <Compile Include="Snapshot\CellSnapshotTest.cs" />
+    <Compile Include="Snapshot\SimulationInfoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
