Human Snapshot Test

--- a/EpidemicSim_Tests/EpidemicSim_Tests.csproj
+++ b/EpidemicSim_Tests/EpidemicSim_Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Simulation\Components\AgeingSimulationComponentTest.cs" />
     <Compile Include="Simulation\Components\InfectionCalculatorComponentTest.cs" />
     <Compile Include="Snapshot\CellSnapshotTest.cs" />
+    <Compile Include="Snapshot\HumanSnapshotTest.cs" />
     <Compile Include="Snapshot\SimulationInfoTest.cs" />
   </ItemGroup>
   <ItemGroup>
