Snapshot test init

--- a/EpidemicSim_Tests/EpidemicSim_Tests.csproj
+++ b/EpidemicSim_Tests/EpidemicSim_Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Snapshot\CellSnapshotTest.cs" />
     <Compile Include="Snapshot\HumanSnapshotTest.cs" />
     <Compile Include="Snapshot\SimulationInfoTest.cs" />
+    <Compile Include="Snapshot\SnapshotTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
