--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Simulation\SimulationData.cs" />
     <Compile Include="Simulation\ETimeConstants.cs" />
     <Compile Include="Snapshot\SnapshotManager.cs" />
+    <Compile Include="Statistics\Pictures\ColorPalette.cs" />
     <Compile Include="Statistics\Pictures\MapCreator.cs" />
     <Compile Include="Statistics\StatisticsManager.cs" />
   </ItemGroup>
