Moved OutPutTargets in own namespace

--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -45,9 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IO\ConsoleOutputTarget.cs" />
+    <Compile Include="IO\OutputTargets\ConsoleOutputTarget.cs" />
     <Compile Include="EpidemicSimulator.cs" />
-    <Compile Include="IO\IOutputTarget.cs" />
+    <Compile Include="IO\OutputTargets\IOutputTarget.cs" />
     <Compile Include="IO\Readers\ArchiveReader.cs" />
     <Compile Include="IO\Readers\ContinuationEventArgs.cs" />
     <Compile Include="IO\Readers\DepartmentMapReader.cs" />
