--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Snapshot\SnapshotManager.cs" />
     <Compile Include="Statistics\Pictures\ColorPalette.cs" />
     <Compile Include="Statistics\Pictures\EColorPalette.cs" />
+    <Compile Include="Statistics\Pictures\EDeathField.cs" />
     <Compile Include="Statistics\Pictures\MapCreator.cs" />
     <Compile Include="Statistics\Pictures\EStatField.cs" />
     <Compile Include="Statistics\StatisticsManager.cs" />
